--- a/platforms/joomla/com_gantry5/admin/scss/joomla-admin/_core.scss
+++ b/platforms/joomla/com_gantry5/admin/scss/joomla-admin/_core.scss
@@ -90,10 +90,6 @@ body.com_modules, body.com_menus {
             padding: 0;
         }
 
-        .settings-param-field {
-            margin-left: 0;
-        }
-
         .g-instancepicker-title {
             font-size: $core-font-size;
             font-style: italic;
